--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Clase Practica Enero 2023"
+rootProject.name = "NAVIGATION VIEW"
 include ':app'
